--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@stripe/stripe-js": "^2.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.12",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
