--- a/.github/workflows/docker.push.yml
+++ b/.github/workflows/docker.push.yml
@@ -31,4 +31,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only -a shopaholic
+      - run: flyctl deploy --remote-only -a glideforce
