--- a/API/fly.toml
+++ b/API/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for glideforce on 2023-12-08T12:12:39+01:00
+# fly.toml app configuration file generated for glideforce on 2023-12-13T12:04:52+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -24,3 +24,8 @@ kill_timeout = "5s"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 256
