--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,17 +1,21 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build-env
 WORKDIR /app
 EXPOSE 8080
 
-# copy csproj and restore as distinct layers
 COPY *.csproj ./
 RUN dotnet restore
 
-# copy everything else and build
 COPY . ./
 RUN dotnet publish -c Release -o out
 
-# build a runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
+# Runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:10.0
 WORKDIR /app
+
+# --- ДОБАВЛЯЕМ ЭТУ СТРОКУ ---
+RUN apt-get update && apt-get install -y libgssapi-krb5-2 && rm -rf /var/lib/apt/lists/*
+# ----------------------------
+
 COPY --from=build-env /app/out .
+ENV ASPNETCORE_URLS=http://+:8080
 ENTRYPOINT ["dotnet", "API.dll"]
